--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ install:
   - ps: $fileContent += "`n-----END RSA PRIVATE KEY-----`n"
   - ps: Set-Content c:\users\appveyor\.ssh\id_rsa $fileContent
   - git submodule update --init --recursive
-  
+
 build_script:
   - if "%platform%" == "x86" SET VS_FULL=%VS_VERSION%
   - if "%platform%" == "x86" SET CUSTOM_FLAG=""
@@ -26,22 +26,31 @@ build_script:
   - if "%platform%" == "x64" SET CUSTOM_FLAG="-DWIN64:Bool=True"
   - mkdir build
   - cd build
-  - cmake -G "%VS_FULL%" %CUSTOM_FLAG% .. > %APPVEYOR_BUILD_FOLDER%\configure.log			
+  - cmake -G "%VS_FULL%" %CUSTOM_FLAG% .. > %APPVEYOR_BUILD_FOLDER%\configure.log
   - cmake --build . --config Release > %APPVEYOR_BUILD_FOLDER%\build.log
   - cd ..
   - mkdir %APPVEYOR_PROJECT_NAME%
+  - cp -r docs %APPVEYOR_PROJECT_NAME%
   - cp -r externals %APPVEYOR_PROJECT_NAME%
   - cp -r help %APPVEYOR_PROJECT_NAME%
+  - cp -r patchers %APPVEYOR_PROJECT_NAME%
+  - cp package-info.json %APPVEYOR_PROJECT_NAME%
   - cp License.md %APPVEYOR_PROJECT_NAME%
   - cp ReadMe.md %APPVEYOR_PROJECT_NAME%
-  - 7z a %APPVEYOR_PROJECT_NAME%-win-%platform%.zip %APPVEYOR_PROJECT_NAME% > %APPVEYOR_BUILD_FOLDER%\archive.log
-
-test_script:
-  - cd build
-  - ctest -C Release . -V
+  - set SHORT_COMMIT=%APPVEYOR_REPO_COMMIT:~0,6%
+  - 7z a %APPVEYOR_PROJECT_NAME%-win-%platform%-%SHORT_COMMIT%.zip %APPVEYOR_PROJECT_NAME% > %APPVEYOR_BUILD_FOLDER%\archive.log
 
 artifacts:
   - name: Build
     path: '*.zip'
-  - name: Log files
-    path: '*.log'
+
+deploy:
+  provider: S3
+  access_key_id: AKIAIWE3SI2TMXC5AJBA
+  secret_access_key:
+    secure: PXJw4guo+r6IdUYK6t8rW01Gi0mWHPmyH+Pa6UmZePtgV1iXaZYoO2R9CgoCQ80y
+  bucket: cycling74-ci
+  folder: $(APPVEYOR_PROJECT_NAME)
+  region: us-west-2
+  set_public: true
+  artifact: "$(APPVEYOR_PROJECT_NAME)-win-$(platform)-$(SHORT_COMMIT).zip"
