--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language:
 - objective-c
 - c++
+
 compiler:
 - clang
+
 sudo: false
 os: osx
 osx_image: xcode7.3
+
 script:
 - mkdir build
 - cd build
@@ -21,12 +24,14 @@ script:
 - if [ -e icon.png ]; then cp icon.png $PACKAGE_NAME; fi
 - if [ -d code ]; then cp -r code $PACKAGE_NAME; fi
 - if [ -d docs ]; then cp -r docs $PACKAGE_NAME; fi
-- if [ -d extensions ]; then cp -r extensions $PACKAGE_NAME; fi
 - if [ -d examples ]; then cp -r examples $PACKAGE_NAME; fi
+- if [ -d extensions ]; then cp -r extensions $PACKAGE_NAME; fi
 - if [ -d externals ]; then cp -r externals $PACKAGE_NAME; fi
 - if [ -d extras ]; then cp -r extras $PACKAGE_NAME; fi
 - if [ -d help ]; then cp -r help $PACKAGE_NAME; fi
 - if [ -d init ]; then cp -r init $PACKAGE_NAME; fi
+- if [ -d java-classes ]; then cp -r java-classes $PACKAGE_NAME; fi
+- if [ -d java-doc ]; then cp -r java-doc $PACKAGE_NAME; fi
 - if [ -d javascript ]; then cp -r javascript $PACKAGE_NAME; fi
 - if [ -d media ]; then cp -r media $PACKAGE_NAME; fi
 - if [ -d misc ]; then cp -r misc $PACKAGE_NAME; fi
@@ -34,6 +39,7 @@ script:
 - if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
 - mkdir dist
 - zip -r dist/$PACKAGE_NAME-$PACKAGE_REV.zip $PACKAGE_NAME
+
 deploy:
   provider: s3
   access_key_id: AKIAIWE3SI2TMXC5AJBA
