--- a/package-info.json.in
+++ b/package-info.json.in
@@ -2,7 +2,7 @@
 	"author" : "Cycling '74",
 	"description" : "Use easing functions in Max for audio, visuals, and automation.",
 	"homepatcher" : "Easing Functions.maxpat",
-	"max_version_min" : "7.1",
+	"max_version_min" : "7.1", "max_version_max" : "none",
 	"name" : "@C74_PACKAGE_NAME@",
 	"os" : {
 		"macintosh" : {
