now including source code

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
 - if [ -d media ]; then cp -r media $PACKAGE_NAME; fi
 - if [ -d misc ]; then cp -r misc $PACKAGE_NAME; fi
 - if [ -d patchers ]; then cp -r patchers $PACKAGE_NAME; fi
+- if [ -d source ]; then cp -r source $PACKAGE_NAME; fi
 - if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
 - mkdir dist
 - zip -r dist/$PACKAGE_NAME-$PACKAGE_REV.zip $PACKAGE_NAME
