--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
 - if [ -e package-info.json ]; then cp package-info.json $PACKAGE_NAME; fi
 - for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_NAME ; done
 - if [ -e icon.png ]; then cp icon.png $PACKAGE_NAME; fi
+- if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_NAME; fi
 - if [ -d code ]; then cp -r code $PACKAGE_NAME; fi
 - if [ -d docs ]; then cp -r docs $PACKAGE_NAME; fi
 - if [ -d examples ]; then cp -r examples $PACKAGE_NAME; fi
