--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
       run: cmake --build build
     - name: test
       run: cd build && ctest
+    - name: package
+      run: script/package.sh
       
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
