--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     - name: test
       run: cd build && ctest
     - name: package
-      run: script/package.sh
+      run: bash script/package.sh
       
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
