--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
     - name: test
       run: cd build && ctest
     - name: package
+      env: |
+        GITHUB_REPOSITORY: ${{ github.repository }}
+        GITHUB_SHA: ${{ github.sha }}
       run: bash script/package.sh
       
     # Runs a set of commands using the runners shell
