--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,12 @@ jobs:
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_SHA: ${{ github.sha }}
       run: bash script/package.sh
+    - name: compress_macos
+      if: matrix.os == 'macos-latest'
+      run: zip -r dist/$PACKAGE_NAME-mac-$PACKAGE_REV-$CONFIG_LOWERCASE.zip $PACKAGE_NAME
+    - name: compress_windows
+      if: matrix.os == 'windows-latest'
+      run: 7z a dist/$PACKAGE_NAME-win-$PACKAGE_REV-$CONFIG_LOWERCASE.zip $PACKAGE_NAME    
     - name: upload
       uses: shallwefootball/s3-upload-action@v1.0.1
       with:
