--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,14 @@ jobs:
       run: cmake --build build
     - name: test
       run: cd build && ctest
-    - name: package
+    - name: package_macos
+      if: matrix.os == 'macos-latest'
       env:
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        PACKAGE_NAME=`echo ${{ github.repository }} | sed 's/.*\///g'`
-        PACKAGE_REV=`echo ${{ github.sha }} | sed -e 's/^[[:alnum:]]\{7\}/&-/g' | sed 's/-.*//'`
+        PACKAGE_NAME=`echo $GITHUB_REPOSITORY | sed 's/.*\///g'`
+        PACKAGE_REV=`echo $GITHUB_SHA | sed -e 's/^[[:alnum:]]\{7\}/&-/g' | sed 's/-.*//'`
         mkdir $PACKAGE_NAME
         if [ -e package-info.json ]; then cp package-info.json $PACKAGE_NAME; fi
         for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_NAME ; done
@@ -64,14 +65,9 @@ jobs:
         if [ -d tests ]; then cp -r tests $PACKAGE_NAME; fi
         if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
         mkdir dist
-    - name: compress_macos
-      if: matrix.os == 'macos-latest'
-      run: |
-        PACKAGE_NAME=`echo ${{ github.repository }} | sed 's/.*\///g'`
-        PACKAGE_REV=`echo ${{ github.sha }} | sed -e 's/^[[:alnum:]]\{7\}/&-/g' | sed 's/-.*//'`
         CONFIG_LOWERCASE=`echo $CONFIG | tr '[A-Z]' '[a-z]'`
         zip -r dist/${{env.PACKAGE_NAME}}-mac-$PACKAGE_REV-$CONFIG_LOWERCASE.zip $PACKAGE_NAME
-    - name: compress_windows
+    - name: package_windows
       if: matrix.os == 'windows-latest'
       run: |
         PACKAGE_NAME=`echo ${{ github.repository }} | sed 's/.*\///g'`
