--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,8 @@ jobs:
       run: |
         set PACKAGE_NAME=`echo %GITHUB_REPOSITORY% | findstr "s/.*\///g'`
         set PACKAGE_REV=`echo %GITHUB_SHA:~0,7%`
+        echo PACKAGE_NAME: %PACKAGE_NAME%
+        echo PACKAGE_REV: %PACKAGE_REV%
         mkdir %APPVEYOR_PROJECT_NAME%
         if exist docs cp -r docs %APPVEYOR_PROJECT_NAME%
         if exist examples cp -r examples %APPVEYOR_PROJECT_NAME%
@@ -93,8 +95,8 @@ jobs:
         cp License.md %APPVEYOR_PROJECT_NAME%
         cp package-info.json %APPVEYOR_PROJECT_NAME%
         cp ReadMe.md %APPVEYOR_PROJECT_NAME%  
-        set CONFIG_LOWERCASE=`echo $CONFIG | tr '[A-Z]' '[a-z]'`
-        7z a dist/$PACKAGE_NAME-win-$PACKAGE_REV-$CONFIG_LOWERCASE.zip $PACKAGE_NAME    
+        set CONFIG_LOWERCASE=`echo %CONFIG% | tr '[A-Z]' '[a-z]'`
+        7z a dist/%PACKAGE_NAME%-win-%PACKAGE_REV%-%CONFIG_LOWERCASE%.zip %PACKAGE_NAME%    
     - name: upload
       uses: shallwefootball/s3-upload-action@v1.0.1
       with:
