--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,30 +71,30 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: cmd
       env:
-        GITHUB_REPOSITORY: ${{ github.repository }}
+        GITHUB_REPOSITORY: ${{ github.event.repository.name }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        set PACKAGE_NAME=`echo %GITHUB_REPOSITORY% | findstr "s/.*\///g'`
+        set PACKAGE_NAME=`echo %GITHUB_REPOSITORY%`
         set PACKAGE_REV=`echo %GITHUB_SHA:~0,7%`
         echo PACKAGE_NAME: %PACKAGE_NAME%
         echo PACKAGE_REV: %PACKAGE_REV%
-        mkdir %APPVEYOR_PROJECT_NAME%
-        if exist docs cp -r docs %APPVEYOR_PROJECT_NAME%
-        if exist examples cp -r examples %APPVEYOR_PROJECT_NAME%
-        if exist extensions cp -r extensions %APPVEYOR_PROJECT_NAME%
-        if exist externals cp -r externals %APPVEYOR_PROJECT_NAME%
-        if exist extras cp -r extras %APPVEYOR_PROJECT_NAME%
-        if exist help cp -r help %APPVEYOR_PROJECT_NAME%
-        if exist init cp -r init %APPVEYOR_PROJECT_NAME%
-        if exist java-classes cp -r java-classes %APPVEYOR_PROJECT_NAME%
-        if exist java-doc cp -r java-doc %APPVEYOR_PROJECT_NAME%
-        if exist jsui cp -r jsui %APPVEYOR_PROJECT_NAME%
-        if exist patchers cp -r patchers %APPVEYOR_PROJECT_NAME%
-        if exist tests cp -r tests %APPVEYOR_PROJECT_NAME%
-        cp icon.png %APPVEYOR_PROJECT_NAME%
-        cp License.md %APPVEYOR_PROJECT_NAME%
-        cp package-info.json %APPVEYOR_PROJECT_NAME%
-        cp ReadMe.md %APPVEYOR_PROJECT_NAME%  
+        mkdir %PACKAGE_NAME%
+        if exist docs cp -r docs %PACKAGE_NAME%
+        if exist examples cp -r examples %PACKAGE_NAME%
+        if exist extensions cp -r extensions %PACKAGE_NAME%
+        if exist externals cp -r externals %PACKAGE_NAME%
+        if exist extras cp -r extras %PACKAGE_NAME%
+        if exist help cp -r help %PACKAGE_NAME%
+        if exist init cp -r init %PACKAGE_NAME%
+        if exist java-classes cp -r java-classes %PACKAGE_NAME%
+        if exist java-doc cp -r java-doc %PACKAGE_NAME%
+        if exist jsui cp -r jsui %PACKAGE_NAME%
+        if exist patchers cp -r patchers %PACKAGE_NAME%
+        if exist tests cp -r tests %PACKAGE_NAME%
+        cp icon.png %PACKAGE_NAME%
+        cp License.md %PACKAGE_NAME%
+        cp package-info.json %PACKAGE_NAME%
+        cp ReadMe.md %PACKAGE_NAME%  
         set CONFIG_LOWERCASE=`echo %CONFIG% | tr '[A-Z]' '[a-z]'`
         7z a dist/%PACKAGE_NAME%-win-%PACKAGE_REV%-%CONFIG_LOWERCASE%.zip %PACKAGE_NAME%    
     - name: upload
