--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,6 +71,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: cmd
       env:
+        GITHUB_EVENT: ${{ github.event }}
         GITHUB_REPOSITORY: ${{ github.event.repository.name }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
@@ -78,6 +79,8 @@ jobs:
         set PACKAGE_REV=`echo %GITHUB_SHA:~0,7%`
         echo PACKAGE_NAME: %PACKAGE_NAME%
         echo PACKAGE_REV: %PACKAGE_REV%
+        echo EVENT: %GITHUB_EVENT%
+        echo %
         mkdir %PACKAGE_NAME%
         if exist docs cp -r docs %PACKAGE_NAME%
         if exist examples cp -r examples %PACKAGE_NAME%
