--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
+        include:
+        - BuildConfiguration: Debug
+        - BuildConfiguration: Release
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
