--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest]
         env: [CONFIG=Debug, CONFIG=Release]
+        config: [Debug, Release]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,12 +28,12 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Configure
+    - name: configure_macos
+      if: matrix.os == 'macos-latest'
       run: mkdir build && cd build && cmake -G Xcode ..
-      runs-on: macos-latest
-    - name: Configure
+    - name: configure_windows
+      if: matrix.os == 'windows-latest'
       run: mkdir build && cd build && cmake ..
-      runs-on: windows-latest
     - name: build
       run: cmake --build build --config=$CONFIG
     - name: test
