--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,6 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        env: [CONFIG=Debug, CONFIG=Release]
         config: [Debug, Release]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -35,7 +34,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: mkdir build && cd build && cmake ..
     - name: build
-      run: cmake --build build --config=$CONFIG
+      run: cmake --build build --config=${{ matrix.config }}
     - name: test
       run: cd build && ctest -C $CONFIG
     - name: package_macos
@@ -43,11 +42,7 @@ jobs:
       env:
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_SHA: ${{ github.sha }}
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-        MATRIX_CONTEXT: ${{ toJson(matrix) }}
       run: |
-        echo $MATRIX_CONTENT
-        echo $GITHUB_CONTEXT
         PACKAGE_NAME=`echo $GITHUB_REPOSITORY | sed 's/.*\///g'`
         PACKAGE_REV=`echo $GITHUB_SHA | sed -e 's/^[[:alnum:]]\{7\}/&-/g' | sed 's/-.*//'`
         mkdir $PACKAGE_NAME
