--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,7 @@ jobs:
       env:
         GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
         GITHUB_SHA: ${{ github.sha }}
+        CONFIG: ${{ matrix.config }}
       run: |
         set PACKAGE_NAME=%GITHUB_REPOSITORY_NAME%
         set PACKAGE_REV=%GITHUB_SHA:~0,7%
