--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,8 +71,7 @@ jobs:
         if [ -d source ]; then cp -r source $PACKAGE_NAME; fi
         if [ -d tests ]; then cp -r tests $PACKAGE_NAME; fi
         if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
-        mkdir dist
-        zip -r dist/$PACKAGE_NAME-mac-$PACKAGE_REV-$PACKAGE_CONFIG.zip $PACKAGE_NAME
+
     - name: package_windows
       if: matrix.os == 'windows-latest'
       shell: cmd
@@ -112,10 +111,8 @@ jobs:
         if exist source cp -r source %PACKAGE_NAME%
         if exist tests cp -r tests %PACKAGE_NAME%
         if exist ReadMe-Public.md cp ReadMe-Public.md %PACKAGE_NAME%/ReadMe.md
-        mkdir dist
-        7z a dist/%PACKAGE_NAME%-win-%PACKAGE_REV%-%PACKAGE_CONFIG%.zip %PACKAGE_NAME%
         
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}-${{ matrix.config }}
-        path: dist
+        path: ${{ github.event.repository.name }}
