--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,7 +100,7 @@ jobs:
       with:
         length: 7
     - uses: ncipollo/release-action@v1
-      if: ${{ github.ref == 'refs/tags/*' }}
+      if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
         artifacts: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}-release
         token: ${{ secrets.GITHUB_TOKEN }}
