ci: try a new release action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,37 +95,14 @@ jobs:
     needs: package
 
     steps:
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-    - name: Dump job context
-      env:
-        JOB_CONTEXT: ${{ toJson(job) }}
-      run: echo "$JOB_CONTEXT"
-    - name: Dump steps context
-      env:
-        STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo "$STEPS_CONTEXT"
-    - name: Dump runner context
-      env:
-        RUNNER_CONTEXT: ${{ toJson(runner) }}
-      run: echo "$RUNNER_CONTEXT"
-    - name: Dump strategy context
-      env:
-        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-      run: echo "$STRATEGY_CONTEXT"
-    - name: Dump matrix context
-      env:
-        MATRIX_CONTEXT: ${{ toJson(matrix) }}
-      run: echo "$MATRIX_CONTEXT"
     - uses: benjlevesque/short-sha@v1.1
       id: short-sha
       with:
         length: 7
-    - uses: ncipollo/release-action@v1
+    - uses: Roang-zero1/github-create-release-action@master
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        artifacts: ${{ github.event.repository.name }}
-        body: "Max Package for all supported platforms"
-        token: ${{ secrets.GITHUB_TOKEN }}
+        args: 
+        - ${{ github.event.repository.name }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
