--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
         path: ${{ github.event.repository.name }}
 
   release:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: package
 
     steps:
