--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,10 +99,9 @@ jobs:
       id: short-sha
       with:
         length: 7
-    - uses: Roang-zero1/github-create-release-action@master
+    - uses: ncipollo/release-action@v1.7.1
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        args:
-        - ${{ github.event.repository.name }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: ${{ github.event.repository.name }}
+        body: "Max Package for all supported platforms"
+        token: ${{ secrets.GITHUB_TOKEN }}
