--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,6 +102,6 @@ jobs:
     - uses: ncipollo/release-action@v1.7.1
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        artifacts: .
+        artifacts: "*"
         body: "Max Package for all supported platforms"
         token: ${{ secrets.GITHUB_TOKEN }}
