--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,48 +42,51 @@ jobs:
       env:
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_SHA: ${{ github.sha }}
-        GITHUB_CONFIG: ${{ matrix.config }}  
+        GITHUB_CONFIG: ${{ matrix.config }}
       run: |
         PACKAGE_NAME=`echo $GITHUB_REPOSITORY | sed 's/.*\///g'`
         PACKAGE_REV=`echo $GITHUB_SHA | sed -e 's/^[[:alnum:]]\{7\}/&-/g' | sed 's/-.*//'`
         PACKAGE_CONFIG=`echo $GITHUB_CONFIG`
-        mkdir $PACKAGE_NAME
-        if [ -e package-info.json ]; then cp package-info.json $PACKAGE_NAME; fi
-        for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_NAME ; done
-        if [ -e icon.png ]; then cp icon.png $PACKAGE_NAME; fi
-        if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_NAME; fi
-        if [ -d code ]; then cp -r code $PACKAGE_NAME; fi
-        if [ -d docs ]; then cp -r docs $PACKAGE_NAME; fi
-        if [ -d examples ]; then cp -r examples $PACKAGE_NAME; fi
-        if [ -d extensions ]; then cp -r extensions $PACKAGE_NAME; fi
-        if [ -d externals ]; then cp -r externals $PACKAGE_NAME; fi
-        if [ -d extras ]; then cp -r extras $PACKAGE_NAME; fi
-        if [ -d help ]; then cp -r help $PACKAGE_NAME; fi
-        if [ -d init ]; then cp -r init $PACKAGE_NAME; fi
-        if [ -d java-classes ]; then cp -r java-classes $PACKAGE_NAME; fi
-        if [ -d java-doc ]; then cp -r java-doc $PACKAGE_NAME; fi
-        if [ -d javascript ]; then cp -r javascript $PACKAGE_NAME; fi
-        if [ -d jsui ]; then cp -r jsui $PACKAGE_NAME; fi
-        if [ -d media ]; then cp -r media $PACKAGE_NAME; fi
-        if [ -d misc ]; then cp -r misc $PACKAGE_NAME; fi
-        if [ -d patchers ]; then cp -r patchers $PACKAGE_NAME; fi
-        if [ -d support ]; then cp -r support $PACKAGE_NAME; fi
-        if [ -d source ]; then cp -r source $PACKAGE_NAME; fi
-        if [ -d tests ]; then cp -r tests $PACKAGE_NAME; fi
-        if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
+        PACKAGE_DIST=$GITHUB_CONFIG/$PACKAGE_NAME
+        mkdir $PACKAGE_DIST
+        if [ -e package-info.json ]; then cp package-info.json $PACKAGE_DIST; fi
+        for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_DIST ; done
+        if [ -e icon.png ]; then cp icon.png $PACKAGE_DIST; fi
+        if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_DIST; fi
+        if [ -d code ]; then cp -r code $PACKAGE_DIST; fi
+        if [ -d docs ]; then cp -r docs $PACKAGE_DIST; fi
+        if [ -d examples ]; then cp -r examples $PACKAGE_DIST; fi
+        if [ -d extensions ]; then cp -r extensions $PACKAGE_DIST; fi
+        if [ -d externals ]; then cp -r externals $PACKAGE_DIST; fi
+        if [ -d extras ]; then cp -r extras $PACKAGE_DIST; fi
+        if [ -d help ]; then cp -r help $PACKAGE_DIST; fi
+        if [ -d init ]; then cp -r init $PACKAGE_DIST; fi
+        if [ -d java-classes ]; then cp -r java-classes $PACKAGE_DIST; fi
+        if [ -d java-doc ]; then cp -r java-doc $PACKAGE_DIST; fi
+        if [ -d javascript ]; then cp -r javascript $PACKAGE_DIST; fi
+        if [ -d jsui ]; then cp -r jsui $PACKAGE_DIST; fi
+        if [ -d media ]; then cp -r media $PACKAGE_DIST; fi
+        if [ -d misc ]; then cp -r misc $PACKAGE_DIST; fi
+        if [ -d patchers ]; then cp -r patchers $PACKAGE_DIST; fi
+        if [ -d support ]; then cp -r support $PACKAGE_DIST; fi
+        if [ -d source ]; then cp -r source $PACKAGE_DIST; fi
+        if [ -d tests ]; then cp -r tests $PACKAGE_DIST; fi
+        if [ -e $PACKAGE_DIST/ReadMe-Public.md ]; then rm -f $PACKAGE_DIST/ReadMe.md; mv $PACKAGE_DIST/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
 
     - name: package_windows
       if: matrix.os == 'windows-latest'
       shell: cmd
       env:
         GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
+        GITHUB_CONFIG: ${{ matrix.config }}
       run: |
         set PACKAGE_NAME=%GITHUB_REPOSITORY_NAME%
-        mkdir %PACKAGE_NAME%
-        if exist extensions cp -r extensions %PACKAGE_NAME%
-        if exist externals cp -r externals %PACKAGE_NAME%
-        if exist support cp -r support %PACKAGE_NAME%
-        if exist tests cp -r tests %PACKAGE_NAME%
+        set PACKAGE_DIST= %GITHUB_CONFIG\\%GITHUB_REPOSITORY_NAME%
+        mkdir %PACKAGE_DIST%
+        if exist extensions cp -r extensions %PACKAGE_DIST%
+        if exist externals cp -r externals %PACKAGE_DIST%
+        if exist support cp -r support %PACKAGE_DIST%
+        if exist tests cp -r tests %PACKAGE_DIST%
         
     - uses: actions/upload-artifact@v2
       with:
@@ -102,6 +105,6 @@ jobs:
     - uses: ncipollo/release-action@v1.7.1
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        artifacts: ./*
+        artifacts: Release
         body: "Max Package for all supported platforms"
         token: ${{ secrets.GITHUB_TOKEN }}
