--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
         if [ -d support ]; then cp -r support $PACKAGE_DIST; fi
         if [ -d source ]; then cp -r source $PACKAGE_DIST; fi
         if [ -d tests ]; then cp -r tests $PACKAGE_DIST; fi
-        if [ -e $PACKAGE_DIST/ReadMe-Public.md ]; then rm -f $PACKAGE_DIST/ReadMe.md; mv $PACKAGE_DIST/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
+        if [ -e $PACKAGE_DIST/ReadMe-Public.md ]; then rm -f $PACKAGE_DIST/ReadMe.md; mv $PACKAGE_DIST/ReadMe-Public.md $PACKAGE_DIST/ReadMe.md; fi
 
     - name: package_windows
       if: matrix.os == 'windows-latest'
