--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,31 +47,30 @@ jobs:
         PACKAGE_NAME=`echo $GITHUB_REPOSITORY | sed 's/.*\///g'`
         PACKAGE_REV=`echo $GITHUB_SHA | sed -e 's/^[[:alnum:]]\{7\}/&-/g' | sed 's/-.*//'`
         PACKAGE_CONFIG=`echo $GITHUB_CONFIG`
-        PACKAGE_DIST=$GITHUB_CONFIG/$PACKAGE_NAME
-        mkdir -p $PACKAGE_DIST
-        if [ -e package-info.json ]; then cp package-info.json $PACKAGE_DIST; fi
-        for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_DIST ; done
-        if [ -e icon.png ]; then cp icon.png $PACKAGE_DIST; fi
-        if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_DIST; fi
-        if [ -d code ]; then cp -r code $PACKAGE_DIST; fi
-        if [ -d docs ]; then cp -r docs $PACKAGE_DIST; fi
-        if [ -d examples ]; then cp -r examples $PACKAGE_DIST; fi
-        if [ -d extensions ]; then cp -r extensions $PACKAGE_DIST; fi
-        if [ -d externals ]; then cp -r externals $PACKAGE_DIST; fi
-        if [ -d extras ]; then cp -r extras $PACKAGE_DIST; fi
-        if [ -d help ]; then cp -r help $PACKAGE_DIST; fi
-        if [ -d init ]; then cp -r init $PACKAGE_DIST; fi
-        if [ -d java-classes ]; then cp -r java-classes $PACKAGE_DIST; fi
-        if [ -d java-doc ]; then cp -r java-doc $PACKAGE_DIST; fi
-        if [ -d javascript ]; then cp -r javascript $PACKAGE_DIST; fi
-        if [ -d jsui ]; then cp -r jsui $PACKAGE_DIST; fi
-        if [ -d media ]; then cp -r media $PACKAGE_DIST; fi
-        if [ -d misc ]; then cp -r misc $PACKAGE_DIST; fi
-        if [ -d patchers ]; then cp -r patchers $PACKAGE_DIST; fi
-        if [ -d support ]; then cp -r support $PACKAGE_DIST; fi
-        if [ -d source ]; then cp -r source $PACKAGE_DIST; fi
-        if [ -d tests ]; then cp -r tests $PACKAGE_DIST; fi
-        if [ -e $PACKAGE_DIST/ReadMe-Public.md ]; then rm -f $PACKAGE_DIST/ReadMe.md; mv $PACKAGE_DIST/ReadMe-Public.md $PACKAGE_DIST/ReadMe.md; fi
+        mkdir -p $PACKAGE_NAME
+        if [ -e package-info.json ]; then cp package-info.json $PACKAGE_NAME; fi
+        for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_NAME ; done
+        if [ -e icon.png ]; then cp icon.png $PACKAGE_NAME; fi
+        if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_NAME; fi
+        if [ -d code ]; then cp -r code $PACKAGE_NAME; fi
+        if [ -d docs ]; then cp -r docs $PACKAGE_NAME; fi
+        if [ -d examples ]; then cp -r examples $PACKAGE_NAME; fi
+        if [ -d extensions ]; then cp -r extensions $PACKAGE_NAME; fi
+        if [ -d externals ]; then cp -r externals $PACKAGE_NAME; fi
+        if [ -d extras ]; then cp -r extras $PACKAGE_NAME; fi
+        if [ -d help ]; then cp -r help $PACKAGE_NAME; fi
+        if [ -d init ]; then cp -r init $PACKAGE_NAME; fi
+        if [ -d java-classes ]; then cp -r java-classes $PACKAGE_NAME; fi
+        if [ -d java-doc ]; then cp -r java-doc $PACKAGE_NAME; fi
+        if [ -d javascript ]; then cp -r javascript $PACKAGE_NAME; fi
+        if [ -d jsui ]; then cp -r jsui $PACKAGE_NAME; fi
+        if [ -d media ]; then cp -r media $PACKAGE_NAME; fi
+        if [ -d misc ]; then cp -r misc $PACKAGE_NAME; fi
+        if [ -d patchers ]; then cp -r patchers $PACKAGE_NAME; fi
+        if [ -d support ]; then cp -r support $PACKAGE_NAME; fi
+        if [ -d source ]; then cp -r source $PACKAGE_NAME; fi
+        if [ -d tests ]; then cp -r tests $PACKAGE_NAME; fi
+        if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
 
     - name: package_windows
       if: matrix.os == 'windows-latest'
@@ -81,13 +80,11 @@ jobs:
         GITHUB_CONFIG: ${{ matrix.config }}
       run: |
         set PACKAGE_NAME=%GITHUB_REPOSITORY_NAME%
-        set PACKAGE_DIST= %GITHUB_CONFIG\\%GITHUB_REPOSITORY_NAME%
-        mkdir %GITHUB_CONFIG%
-        mkdir %PACKAGE_DIST%
-        if exist extensions cp -r extensions %PACKAGE_DIST%
-        if exist externals cp -r externals %PACKAGE_DIST%
-        if exist support cp -r support %PACKAGE_DIST%
-        if exist tests cp -r tests %PACKAGE_DIST%
+        mkdir %PACKAGE_NAME%
+        if exist extensions cp -r extensions %PACKAGE_NAME%
+        if exist externals cp -r externals %PACKAGE_NAME%
+        if exist support cp -r support %PACKAGE_NAME%
+        if exist tests cp -r tests %PACKAGE_NAME%
         
     - uses: actions/upload-artifact@v2
       with:
@@ -103,9 +100,27 @@ jobs:
       id: short-sha
       with:
         length: 7
+
+    - uses: actions/download-artifact@v2
+      with:
+        name: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}-release
+        path: ${{ github.event.repository.name }}
+    
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: ${{ github.event.repository.name }}
+
+    - name: zip
+      run: zip -r ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}.zip ${{ github.event.repository.name }}
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: release-build
+        path: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}.zip
+
     - uses: ncipollo/release-action@v1.7.1
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        artifacts: Release
+        artifacts: release-build
         body: "Max Package for all supported platforms"
         token: ${{ secrets.GITHUB_TOKEN }}
