--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,6 +121,6 @@ jobs:
     - uses: ncipollo/release-action@v1.7.1
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        artifacts: release-build
+        artifacts: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}.zip
         body: "Max Package for all supported platforms"
         token: ${{ secrets.GITHUB_TOKEN }}
