--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,16 +111,16 @@ jobs:
       working-directory: ${{ github.event.repository.name }}
 
     - name: zip
-      run: zip -r ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}.zip ${{ github.event.repository.name }}
+      run: zip -r ${{ github.event.repository.name }}-package-for-max-${{ steps.short-sha.outputs.sha }}.zip ${{ github.event.repository.name }}
 
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}-zipped-release
-        path: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}.zip
+        path: ${{ github.event.repository.name }}-package-for-max-${{ steps.short-sha.outputs.sha }}.zip
 
     - uses: ncipollo/release-action@v1.7.1
       if: ${{ contains( github.ref, 'refs/tags/' ) }}
       with:
-        artifacts: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}.zip
+        artifacts: ${{ github.event.repository.name }}-package-for-max-${{ steps.short-sha.outputs.sha }}.zip
         body: "Max Package for all supported platforms"
         token: ${{ secrets.GITHUB_TOKEN }}
