--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,29 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.16)
 
+if (APPLE)
+    set (CMAKE_OSX_DEPLOYMENT_TARGET "10.11")
+endif ()
+
+
+project(Min-DevKit)
+
+
+string(REGEX REPLACE "(.*)/" "" THIS_PACKAGE_NAME "${CMAKE_CURRENT_SOURCE_DIR}")
 
 
 if (${CMAKE_GENERATOR} MATCHES "Xcode")
- 		if (${XCODE_VERSION} VERSION_LESS 7)
-  			message(STATUS "Xcode 7 or higher is required. Please install from the Mac App Store.")
-			return ()
-		endif ()
+         if (${XCODE_VERSION} VERSION_LESS 10)
+              message(STATUS "Xcode 10 or higher is required. Please install from the Mac App Store.")
+            return ()
+        endif ()
 endif ()
 
 
 # Fetch the correct version of the min-api
 message(STATUS "Updating Git Submodules")
 execute_process(
-	COMMAND				git submodule update --init --recursive
-	WORKING_DIRECTORY	"${CMAKE_CURRENT_SOURCE_DIR}"
+    COMMAND				git submodule update --init --recursive
+    WORKING_DIRECTORY	"${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
 
@@ -36,8 +45,8 @@ endif ()
 # Generate a project for every folder in the "source/projects" folder
 SUBDIRLIST(PROJECT_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/source/projects)
 foreach (project_dir ${PROJECT_DIRS})
-	if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/source/projects/${project_dir}/CMakeLists.txt")
-		message("Generating: ${project_dir}")
-		add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/source/projects/${project_dir})
-	endif ()
+    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/source/projects/${project_dir}/CMakeLists.txt")
+        message("Generating: ${project_dir}")
+        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/source/projects/${project_dir})
+    endif ()
 endforeach ()
