--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
-name: CI
+name: Release
 
-on: [push, pull_request]
+on:
+  create:
+    tags:
+      - v*
+  workflow_dispatch:
 
 jobs:
   package:
@@ -8,19 +12,22 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        config: [debug, release]
+        config: [release]
 
     steps:
     - uses: actions/checkout@v2
-      
-    - uses: benjlevesque/short-sha@v1.1
+      with:
+        submodules: 'recursive'
+        fetch-depth: '0'
+
+    - uses: benjlevesque/short-sha@v1.2
       id: short-sha
       with:
         length: 7
 
     - name: configure_macos
       if: matrix.os == 'macos-latest'
-      run: mkdir build && cd build && cmake -G Xcode ..
+      run: mkdir build && cd build && cmake -G Xcode .. "-DCMAKE_OSX_ARCHITECTURES=x86_64;arm64"
  
     - name: configure_windows
       if: matrix.os == 'windows-latest'
@@ -49,9 +56,12 @@ jobs:
         PACKAGE_CONFIG=`echo $GITHUB_CONFIG`
         mkdir -p $PACKAGE_NAME
         if [ -e package-info.json ]; then cp package-info.json $PACKAGE_NAME; fi
-        for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_NAME ; done
+        # if [ -e package-info.json.in ]; then cp package-info.json.in $PACKAGE_NAME; fi
+        # for f in *.md; do [ -e "$f" ] && cp "$f" $PACKAGE_NAME ; done
+        if [ -e License.md ]; then cp License.md $PACKAGE_NAME; fi
+        if [ -e ReadMe.md ]; then cp ReadMe.md $PACKAGE_NAME; fi
         if [ -e icon.png ]; then cp icon.png $PACKAGE_NAME; fi
-        if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_NAME; fi
+        # if [ -e CMakeLists.txt ]; then cp CMakeLists.txt $PACKAGE_NAME; fi
         if [ -d code ]; then cp -r code $PACKAGE_NAME; fi
         if [ -d docs ]; then cp -r docs $PACKAGE_NAME; fi
         if [ -d examples ]; then cp -r examples $PACKAGE_NAME; fi
@@ -60,6 +70,7 @@ jobs:
         if [ -d extras ]; then cp -r extras $PACKAGE_NAME; fi
         if [ -d help ]; then cp -r help $PACKAGE_NAME; fi
         if [ -d init ]; then cp -r init $PACKAGE_NAME; fi
+        if [ -d interfaces ]; then cp -r interfaces $PACKAGE_NAME; fi
         if [ -d java-classes ]; then cp -r java-classes $PACKAGE_NAME; fi
         if [ -d java-doc ]; then cp -r java-doc $PACKAGE_NAME; fi
         if [ -d javascript ]; then cp -r javascript $PACKAGE_NAME; fi
@@ -67,9 +78,10 @@ jobs:
         if [ -d media ]; then cp -r media $PACKAGE_NAME; fi
         if [ -d misc ]; then cp -r misc $PACKAGE_NAME; fi
         if [ -d patchers ]; then cp -r patchers $PACKAGE_NAME; fi
+        if [ -d script ]; then cp -r script $PACKAGE_NAME; fi
         if [ -d support ]; then cp -r support $PACKAGE_NAME; fi
-        if [ -d source ]; then cp -r source $PACKAGE_NAME; fi
-        if [ -d tests ]; then cp -r tests $PACKAGE_NAME; fi
+        # if [ -d source ]; then cp -r source $PACKAGE_NAME; fi
+        # if [ -d tests ]; then cp -r tests $PACKAGE_NAME; fi
         if [ -e $PACKAGE_NAME/ReadMe-Public.md ]; then rm -f $PACKAGE_NAME/ReadMe.md; mv $PACKAGE_NAME/ReadMe-Public.md $PACKAGE_NAME/ReadMe.md; fi
 
     - name: package_windows
@@ -94,10 +106,17 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: package
-    if: ${{ contains( github.ref, 'refs/tags/' ) }}
 
     steps:
-    - uses: benjlevesque/short-sha@v1.1
+    - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
+        fetch-depth: '0'
+        
+    - uses: battila7/get-version-action@v2
+      id: get_version
+
+    - uses: benjlevesque/short-sha@v1.2
       id: short-sha
       with:
         length: 7
@@ -112,15 +131,15 @@ jobs:
       working-directory: ${{ github.event.repository.name }}
 
     - name: zip
-      run: zip -r ${{ github.event.repository.name }}-package-for-max-${{ steps.short-sha.outputs.sha }}.zip ${{ github.event.repository.name }}
+      run: zip -r ${{ github.event.repository.name }}-package-for-max-${{ steps.get_version.outputs.version }}.zip ${{ github.event.repository.name }}
 
     - uses: actions/upload-artifact@v2
       with:
-        name: ${{ github.event.repository.name }}-${{ steps.short-sha.outputs.sha }}-zipped-release
-        path: ${{ github.event.repository.name }}-package-for-max-${{ steps.short-sha.outputs.sha }}.zip
+        name: ${{ github.event.repository.name }}-${{ steps.get_version.outputs.version }}-zipped-release
+        path: ${{ github.event.repository.name }}-package-for-max-${{ steps.get_version.outputs.version }}.zip
 
-    - uses: ncipollo/release-action@v1.7.1
+    - uses: ncipollo/release-action@v1
       with:
-        artifacts: ${{ github.event.repository.name }}-package-for-max-${{ steps.short-sha.outputs.sha }}.zip
+        artifacts: ${{ github.event.repository.name }}-package-for-max-${{ steps.get_version.outputs.version }}.zip
         body: "Max Package for all supported platforms"
         token: ${{ secrets.GITHUB_TOKEN }}
